Variable', names(dataset))). However I fear that it may end up not
being very responsive, since the animint would have to be re-compiled
by the shiny server after every change to the shiny input.

2014.6.2

DSL: aes(href=sprintf("http://genome.ucsc.edu/%s", id)) to have
clicking open a new web browser tab at that URL.

OUTPUT: gg2animint is now deprecated, use animint2dir instead.

2014.5.22

All tests are now working.

The animist2gist function posts relevant files as a gist and allows
one to automatically view/share plots via http://bl.ocks.org

Moved a number of packages from DEPENDS to IMPORTS 
(except for ggplot2 and proto). Also added gistr to SUGGESTS 
as it is needed for animist2gist.

2014.5.17

Fixed the "too many legend entires" bug. For more info,
see the commit that introduced the bug  (and the note on
why it doesn't work)

https://github.com/tdhock/animint/commit/069c167117c169dea9277608e8a0cbed3c75fcff

2014.5.16

The new knit_print.animint function tells knitr how to print
objects of class "animint". This allows one to embed multiple
animint plots in a single HTML via R Markdown and knitr. This
is currently only possible with the dev version of knitr,
but this won't be a problem when v1.6 is released to CRAN

2014.5.15

Use a local file server if the servr package is installed.

2014.5.9

Download progress table at the bottom of the plot.
- click a button to show or hide the entire table.

BUGFIX: geom_rect(size=0) is now correctly translated to
<rect style="stroke-width: 0;">.

2014.5.5

duration=list(complexity.i=2000) means a smooth transition over 2
seconds ONLY when the complexity.i selector is updated. e.g. for
geom_ribbon(aes(showSelected=sample1, showSelected2=sample2,
showSelected3=complexity.i, showSelected4=set.name), this means that
there should be no smooth transition when we click to update sample1,
sample2, or set.name. See
https://github.com/tdhock/animint-examples/blob/master/examples/chip.seq.R
