@@ -5,7 +5,10 @@
 #' @param plot.list a named list of ggplots and option lists.
 #' @param out.dir local directory to store html/js/csv files.
 #' @param json.file character string that names the JSON file with metadata associated with the plot.
-#' @param domain website domain for viewing result. Browser is prompted only if there is \link{httr::url_success}.
+#' @param url_prefix first part of URL for viewing result, with
+#' http:// but without trailing /
+#' e.g. "http://bl.ocks.org/tdhock/raw". Browser is prompted only if
+#' there is \link{httr::url_success}.
 #' @param ... options passed onto \link{gistr::gist}
 #' @export
 #' 
@@ -23,11 +26,11 @@
 #'                         clickSelects=id), data=iris))
 #' animint2gist(viz, description = "My animint plot")
 #' }
-
-
-animint2gist <- function(plot.list, out.dir = tempfile(), json.file = "plot.json", ...,
-                         domain = paste("http://bl.ocks.org", getOption("github.username"), "raw", sep = "/")) {
-  gg2animint(plot.list, out.dir, json.file, open.browser = FALSE)
+animint2gist <- function
+(plot.list, out.dir = tempfile(), json.file = "plot.json", ...,
+ url_prefix = sprintf("http://bl.ocks.org/%s/raw",
+   getOption("github.username"))){
+  animint2dir(plot.list, out.dir, json.file, open.browser = FALSE)
   #if (is.null(getOption("github.username")) || is.null(getOption("github.password"))) 
   #  warning("Make sure 'github.username'", 
   #          "and 'github.password' are",
@@ -45,10 +48,15 @@ animint2gist <- function(plot.list, out.dir = tempfile(), json.file = "plot.json
   html <- readLines(index.file)
   html <- gsub("vendor/", "", html)
   cat(html, file = index.file, sep = "\n")
-  gist <- gistr::gist(file.path(out.dir, list.files(out.dir)), ...)
+  all.files <- Sys.glob(file.path(out.dir, "*"))
+  all.file.info <- file.info(all.files)
+  is.empty <- all.file.info$size == 0
+  is.ignored <- all.file.info$isdir | is.empty
+  to.post <- all.files[!is.ignored]
+  gist <- gistr::gist(to.post, ...)
   elem <- strsplit(gist, split = "/")[[1]]
   gist.code <- elem[length(elem)]
-  url_name <- file.path(domain, gist.code)
+  url_name <- file.path(url_prefix, gist.code)
   if (interactive() && httr::url_success(url_name)) browseURL(url_name)
 }
 
